[package]
name = "sigo"
version = "0.2.0"
authors = ["satake_makoto <satake.software@gmail.com"]
edition = "2021"
description = "command-line task management utility for work"
license = "MIT"
categories = ["command-line-utilities"]
repository = "https://github.com/satake0916/sigotowarrior"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.116"
tabled = { version = "0.15.0", features = ["ansi"] }
xdg = "2.5.2"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
terminal_size = "0.3.0"
regex = "1.10.5"
