[package]
name = "sigo_macro_derive"
version = "0.1.2"
authors = ["satake_makoto <satake.software@gmail.com"]
edition = "2021"
description = "helper derives for sigo"
license = "MIT"
repository = "https://github.com/satake0916/sigotowarrior"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = {version = "2.0.63", features = ["full", "extra-traits", "visit-mut", "visit"]}

